# TJsmart

./: .gitignore  CMakeLists.txt  readme.md
source/: main.cpp
source/cam/: basichandle.cpp  basichandle.h  cam_interface.h  mainhandle.cpp  prehandle.cpp  prehandle.h  prehandle2.cpp  ttt1
source/gyro/: a.out  gyro.cpp  gyro_angle.cpp  uart.cpp  uart_interface.h
source/queen/: find_path.cpp  find_path.h  global_var.h  readfile_match.cpp  readfile_match.h
source/queen/.kdev4/: ai.kdev4
source/uart/: uart.cpp  uart_interface.h
